samples/_failures_safe/1761271280_3dcfa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6043478d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6043478d.c:168:5: error: expected expression at end of input
  168 |     while (*token_count <
      |     ^~~~~
./samples/SAFE/__tmp_6043478d.c:168:5: error: expected declaration or statement at end of input
